--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('./fonts/Poppins-Regular.ttf');
+    src: url('./Poppins-Regular.ttf');
 }
 
 body, html {
