--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
     --palette2-color3: rgb(88,129,87);
     --palette2-color4: rgb(58,90,64);
     --palette2-color5: rgb(52,78,65);
+
+    --btn-blue: #0d6efd;
+    --btn-green: #198754;
+    --btn-red: #dc3545;
 }
 
 
@@ -100,6 +104,7 @@ body, html {
 
 .left-side {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: white; /* Cor de fundo opcional para visualização */
@@ -189,6 +194,50 @@ body, html {
     opacity: 1;
 }
 
+/* Tabs */
+
+.tabs {
+    display: flex;
+    z-index: 1;
+    margin-bottom: 0;
+    width: 100%;
+    padding: 0 1rem;
+    gap: 3px;
+}
+
+.tab {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+    min-width: 2.56em;
+    vertical-align: middle;
+    padding: 0.5em;
+    border-top-left-radius: 0.6rem;
+    border-top-right-radius: 0.6rem;
+    background-color: var(--color-gray-6);
+    margin: 0 1px;
+    border: none;
+    gap: 0.5rem;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.tab.removed {
+    opacity: 0;
+    transform: scale(0);
+}
+
+.tab.active {
+    background-color: var(--color-gray-5);
+}
+
+.tab svg:hover {
+    background-color: var(--color-gray-1);
+    color: white;
+    border-radius: 50%
+}
+
 /* Left Container -> Truth-table */
 
 .truthtable-container {
@@ -197,6 +246,7 @@ body, html {
     text-align: center;
     max-height: calc(99vh - 5rem - 2rem);
     width: fit-content;
+    z-index: 2;
     background-color: var(--palette2-color1);
     border-radius: 1rem;
     box-shadow: 0 .4rem .8rem #0005;
@@ -329,6 +379,7 @@ body, html {
     justify-content: space-between;
     margin: 0 1rem;
     padding: 1rem 0;
+    overflow: visible;
 }
 
 .truthtable-buttons button {
@@ -356,6 +407,49 @@ body, html {
 .truthtable-buttons button:hover {
     background-color: var(--palette1-color2);
     transform: scale(1.1); /* Um leve aumento de tamanho */
+}
+
+.action-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 0 1rem;
+    padding-bottom: 1rem;
+}
+
+.action-buttons button {
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    font-size: 1em;
+    min-width: 2.56em;
+    vertical-align: middle;
+    padding: 0.5em;
+    border-radius: 0.6rem;
+    background-color: var(--color-gray-6);
+    margin: 0 1px;
+    border: none;
+    gap: 0.5rem;
+    transition: transform 0.2s;
+}
+
+button[file-format='png']:hover {
+    color: var(--color-white);
+    transform: scale(1.1);
+    background-color: var(--btn-blue);
+}
+
+button[file-format='pdf']:hover {
+    color: var(--color-white);
+    transform: scale(1.1);
+    background-color: var(--btn-red);
+}
+
+button[file-format='xml']:hover {
+    color: var(--color-white);
+    transform: scale(1.1);
+    background-color: var(--btn-green);
 }
 
 
@@ -459,7 +553,7 @@ body, html {
 
 /* Isolated: */
 
-a[isolated='s'] {
+a[isolated-cases='0'] {
     height: calc(100% - 8px);
     width: calc(100% - 8px);
     border: 3px solid var(--palette2-color4);
@@ -596,12 +690,21 @@ a[octet-casev='5'], a[octet-casev='6'] {
     border-right: 3px solid var(--palette2-color4);
 }
 
+.hover-group {
+    background-color: var(--palette2-color4);
+    mix-blend-mode: multiply; /* Mistura a cor com o fundo sem ocultar */
+    isolation: isolate;
+    position: relative;
+}
+
 /* KarnaughMap -> Buttons */
 
 .karnaughmap-buttons {
     display: flex;
     padding: 1rem 0;
-    justify-content: center;
+    margin: 0 1rem;
+    gap: 1rem;
+    justify-content: space-between;
     grid-column-start: 1;
     grid-column-end: 3;
 }
